# monocian

./: .clang-format  .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  vcpkg.json
cxx/: CMakeLists.txt
cxx/av/: CMakeLists.txt  depth_encoding.cc  depth_encoding.h  frame_rate_tracker.cc  frame_rate_tracker.h  video_encoder.cc  video_encoder.h  video_encoding_queue.cc  video_encoding_queue.h
cxx/az/: CMakeLists.txt  buffered_blob_writer.cc  buffered_blob_writer.h
cxx/base/: CMakeLists.txt  async_processing_queue.h  graph.h  merge.h
cxx/base/storage/: broadcast_writer.cc  broadcast_writer.h  file_writer.cc  file_writer.h  writer.h
cxx/ogl/: CMakeLists.txt  camera.cc  camera.h  constants.h  full_screen_video.cc  full_screen_video.h  shader.cc  shader.h  simple_mesh.cc  simple_mesh.h  text_overlay_renderer.cc  text_overlay_renderer.h  window.cc  window.h
cxx/resources/: generate_resource_c.py  load_resource.h
cxx/rt/: CMakeLists.txt  camera.h  hittable.h  ray.cc  ray.h  vec3.cc  vec3.h
cxx/rt/geometry/: sphere.h
cxx/selective_search/: CMakeLists.txt  selective_search.cc  selective_search.h
cxx/stb_impl/: CMakeLists.txt  stb_impl.cc
cxx/storage/: CMakeLists.txt  broadcast_writer.cc  broadcast_writer.h  buffered_blob_writer.cc  buffered_blob_writer.h  file_writer.cc  file_writer.h  writer.h
learn_open_gl/: CMakeLists.txt
learn_open_gl/01_getting_started/: CMakeLists.txt  main.cc
learn_open_gl/02_lighting/: CMakeLists.txt  main.cc
learn_open_gl/02_lighting/shaders/: common_vertex.glsl  lit_object_frag.glsl
learn_open_gl/03_models/: CMakeLists.txt  main.cc
learn_raytracing/: CMakeLists.txt
learn_raytracing/one_weekend/: CMakeLists.txt  main.cc
models/common/datasets/: azure_container_image_dataset.py
models/common/trainers/: basic_trainer.py  dataloader_manager.py
models/diffuser_workshop/: train.py
models/mae/: mae_train.py
models/patch_classifier/: arrow_util.py  cluster_trainer.py  image_patch_featurizer.py  main.py
models/patch_classifier/templates/: clustering_examples.html.jinja
models/unet_hierarchical_segmenter/: double_unet_model.py  unet_blocks.py  unet_model.py
src/: CMakeLists.txt
src/base/: CMakeLists.txt  graph.cc  graph.h  merge.h
src/open_gl/: CMakeLists.txt  camera.cc  camera.h  full_screen_video.cc  full_screen_video.h  glfw_callback_manager.cc  glfw_callback_manager.h  shader.cc  shader.h  window.cc  window.h
src/resources/: CMakeLists.txt  generate_resource_c.py  load_resource.h
src/selective_search/: CMakeLists.txt  component.cc  component.h  selective_search.cc  selective_search.h
src/stb_impl/: CMakeLists.txt
test/: CMakeLists.txt
test/av/: depth_encoding_test.cc
test/base/: graph_test.cc  merge_test.cc
test/rt/: vec3_test.cc
test/selective_search/: selective_search_test.cc
tools/: CMakeLists.txt
tools/flickr_scrapr/: extension_local_service.py  flask_run.cmd  metadata.json  requirements.txt
tools/flickr_scrapr/extension/: background.js  content.js  manifest.json
tools/realsense_capture/: CMakeLists.txt  broadcast_writer.cc  broadcast_writer.h  buffered_blob_writer.cc  buffered_blob_writer.h  file_writer.h  main.cc  settings.json  video_encoder.cc  video_encoder.h  video_encoding_queue.cc  video_encoding_queue.h  writer.h
tools/segment_images/: CMakeLists.txt  main.cc
